# folk_d-merge

./: Cargo.toml
.github/workflows/: build-and-test.yaml  build-egui.yaml
core/nemesis_xml/src/helpers/: comment.rs
egui/: Cargo.toml
egui/src/: main.rs
